[package]
name = "ros-env"
version = "0.2.0"
edition = "2021"
authors = ["Sam Privett <sam@privett.dev>"]
license = "Apache-2.0"
description = "Top-level Rust crate to include generated Rust code found in a sourced ROS 2 workspace"
rust-version = "1.85"
repository = "https://github.com/ros2-rust/ros-env"
keywords = ["ROS", "ROS2", "robotics"]

[dependencies]
# All the sources we `include!()` depend on this runtime.
rosidl_runtime_rs = "0.6"

# Needed for serliazation and deserialization of vendored messages
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

[build-dependencies]
# Used to read Cargo.toml dependencies when re-exporting generated crates
cargo_toml = "0.22"

# Helper crate for working with AMENT_PREFIX_PATH
ament_rs = "0.3"

[features]
default = ["include_all"]
include_all = []
action_msgs = []
builtin_interfaces = []
rcl_interfaces = []
rosgraph_msgs = []
unique_identifier_msgs = []
example_interfaces = []
test_msgs = []
rclrs_core = [
    "action_msgs",
    "builtin_interfaces",
    "rcl_interfaces",
    "rosgraph_msgs",
    "unique_identifier_msgs",
]
serde = ["dep:serde", "dep:serde-big-array", "rosidl_runtime_rs/serde"]
use_ros_shim = ["rosidl_runtime_rs/use_ros_shim"]
